--- a/src/main/resources/bookingStepTwo.html
+++ b/src/main/resources/bookingStepTwo.html
@@ -8,7 +8,11 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Register</title>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
+    <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
     <style>
         .sized{
 
@@ -51,6 +55,16 @@
         .darkBorder{
             border-color: #111;
         }
+        .gj-picker-bootstrap div[role=navigator]{
+            color:#000;
+        }
+        table{
+            color:#000;
+        }
+        .input-group-text{
+            background-color: #eaa700;
+            border: 1px solid #d19500;
+        }
 
     </style>
 </head>
@@ -79,56 +93,50 @@
     </nav>
 </div>
 
-<div class="row mt-3 mb-3">
+<div class="row mt-3 mb-5">
     <div class="col-12">
         <div class="">
-            <h2 class="text-center honeyYellow">Your reservations</h2>
+            <h2 class="text-center honeyYellow">Book a room</h2>
         </div>
     </div>
 </div>
-<!--    table of bookings-->
-<div class="row">
-    <div class="col-12">
-        <div class="table-responsive">
-            <table class="table table-striped">
-                <thead class="emberYellow">
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Room</th>
-                    <th scope="col">Start Date</th>
-                    <th scope="col">End Date</th>
-                    <th scope="col">Status</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Apartement</td>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                </tr>
-                <tr>
-                    <th scope="row">2</th>
-                    <td>Apartement</td>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                </tr>
-                <tr>
-                    <th scope="row">3</th>
-                    <td>Signle room</td>
-                    <td>Larry</td>
-                    <td>the Bird</td>
-                    <td>@twitter</td>
-                </tr>
-                </tbody>
-            </table>
+<div class="container mt-3">
+    <div class="row mt-3 mb-3">
+        <div class="col-lg-12 col-md-12 col-sm-12">
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <label class="input-group-text" for="inputGroupSelect01">Room Options</label>
+                </div>
+                <select class="custom-select" id="inputGroupSelect01">
+                    <option selected>Choose...</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                </select>
+            </div>
+        </div>
+        <div class="col-lg-12 col-md-12 col-sm-12">
+            <label for="">Price</label>
+            <h4 class="honeyYellow">Price</h4>
         </div>
     </div>
+</div>
 
+<div class="row mx-auto">
+    <div class="col-12 mx-auto text-center mt-5">
+        <button class="btn btn-warning" type="submit" >Confirm Booking</button>
+    </div>
 </div>
+
 
 
 </body>
+<script>
+    $('#datepicker').datepicker({
+        uiLibrary: 'bootstrap4'
+    });
+    $('#datepicker2').datepicker({
+        uiLibrary: 'bootstrap4'
+    });
+</script>
 </html>
